--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# sample videos
+/src/demo_videos
+
 # dependencies
 /node_modules
 
