--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "rc-progress": "^2.2.5",
+    "rc-slider": "^8.6.1",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "video-react": "^0.10.4"
   },
   "scripts": {
     "start": "react-scripts start",
