--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://web.stanford.edu/~wuzhengx/SSNL/EmotionalTest/build",
   "dependencies": {
+    "jquery": "^3.3.1",
     "rc-progress": "^2.2.5",
     "rc-slider": "^8.6.1",
     "react": "^16.3.0",
