--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://web.stanford.edu/~wuzhengx/SSNL/EmotionalTest/build",
+  "homepage": "https://web.stanford.edu/~wuzhengx/SSNL/EmotionalTest/build",
   "dependencies": {
+    "chart.js": "^1.1.1",
     "jquery": "^3.3.1",
     "rc-progress": "^2.2.5",
     "rc-slider": "^8.6.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react": "^16.3.2",
+    "react-chartjs": "^1.2.0",
+    "react-dom": "^16.3.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "video-react": "^0.10.4"
